# amigo-cli

./: .gitignore  Cargo.toml  mock.sh
migrations/: V1__INIT.sql
src/: actions.rs  cli.rs  config.rs  db.rs  envio.rs  import.rs  main.rs
